--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,12 @@
 {
     "require": {
-        "robmorgan/phinx": "^0.10.7"
+        "robmorgan/phinx": "^0.10.7",
+        "twbs/bootstrap": "4.3.1"
+    },
+    "scripts": {
+        "post-update-cmd": [
+            "rm -rf dist/bootstrap",
+            "cp -R vendor/twbs/bootstrap/dist dist/bootstrap"
+        ]
     }
 }
