--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "robmorgan/phinx": "^0.10.7",
-        "twbs/bootstrap": "4.3.1"
+        "twbs/bootstrap": "4.3.1",
+        "catfan/medoo": "^1.6"
     },
     "scripts": {
         "post-update-cmd": [
